# nyc-housing-health

./: .env.example  .gitignore  Makefile  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: params.yml
data/processed/: housing_health_index.csv
scripts/analyze/: calculate_index.py  correlation_analysis.py  disparity_analysis.py  temporal_trends.py
scripts/collect/: download_dob_violations.py  download_hpd_violations.py
scripts/process/: add_building_age_demographics.py  aggregate_to_neighborhoods.py  build_address_lookup.py  clean_complaints.py  clean_violations.py  fix_index_components.py  improve_health_matching.py  join_health_data.py  update_health_data.py
scripts/visualize/: create_neighborhood_map.py  create_static_figures.py
src/housing_health/: io_utils.py  logging_utils.py  paths.py
